Fix broken styles

--- a/src/pages/CreateTrip/index.scss
+++ b/src/pages/CreateTrip/index.scss
@@ -1,6 +1,6 @@
 .create-trip__wrapper{
-  width: 1920px;
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
 }
 
 .create-trip__logo {
@@ -20,6 +20,19 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.create-trip--date-img {
+  width: 30px;
+  display: inline-block;
+  float: right;
+  cursor: pointer;
+}
+
+.create-trip--input-calendar {
+  position: absolute;
+  top: 80px;
+  right: -550px;
+}
+
 .create-trip--title-wrapper {
   display: flex;
   justify-content: center;
@@ -34,6 +47,7 @@
 
 .create-trip--input-wrapper {
   display: flex;
+  position: relative;
   width: 668px;
 }
 
@@ -46,6 +60,7 @@
   color: white;
   text-align: center;
   font-size: 30px;
+  line-height: 25px;
   padding: 10px;
   height: 50px;
   width: 100%;
